# chatline-interface

./: .gitignore  CLAUDE.md  Makefile  Pipfile  README.md  adaptive_buffer.py  animations.py  chat_interface.py  client.py  conversation.py  conversation_state.py  direct_test.py  dot_load.py  dot_loader.py  factories.py  generator.py  interface.py  interface_manager.py  narrative_stages.md  output_handler.py  painter.py  painter_notes.md  publish.py  pyproject.toml  request.txt  reverse_stream.py  screen_manager.py  scrolling_input.py  server.py  setup.py  stream.py  stream_handler.py  styles.py  terminal.py  test.py  test_client.py  test_server.py  text.py  utilities.py
.archive/: adaptive_buffer.py  async_stream_manager.py  chat_interface.py  conversation.py  dot_load_notes.md  dot_loader.py  factories.py  helpers.py  painter.py  printer.py  reverse_stream.py  reverse_stream_notes.md  scrolling_input.py  scrolling_input_notes.md  state.py
.archive/animations/: __init__.py  base.py  dot_loader.py  reverse.py  scroll.py
.archive/state_management/: stream_handler.py
.archive/streaming_output/: painter.py  printer.py
animations/: dot_loader.py  reverse_stream.py
chatline/: __init__.py  animations.py  conversation.py  conversation_state.py  generator.py  interface.py  logger.py  message_provider.py  remote.py  stream.py  styles.py  terminal.py
chatline/animations/: __init__.py  dot_loader.py  reverse_streamer.py
chatline/conversation/: __init__.py  actions.py  history.py  messages.py  preface.py
chatline/display/: __init__.py  io.py  styles.py  terminal.py  utilities.py
chatline/display/animations/: __init__.py  dot_loader.py  reverse_streamer.py  scroller.py
chatline/display/style/: __init__.py  definition.py  definitions.py  engine.py  strategies.py
chatline/display/styles/: __init__.py  application.py  definition.py  engine.py  strategies.py
chatline/providers/: __init__.py  base.py  bedrock.py  openrouter.py
chatline/stream/: __init__.py  embedded.py  generator.py  remote.py
example/: client.py  server.py
examples/: client.py  server.py
state/: animations.py  conversation.py  stream.py  terminal.py  text.py
state_managers/: conversation_manager.py  screen.py  stream.py  terminal_io.py  terminal_manager.py
stream/: painter.py  printer.py
streaming_output/: buffer.py  painter.py  printer.py
test/: client.py
tests/: test_consecutive_rewind.py
utilities/: release.py
