# pyproject.toml

[tool.poetry]
name = "chatline"
version = "0.0.6"
authors = ["Alex Basile <basileaw@gmail.com>"]
description = "A pretty command line interface for LLM chat."
readme = "README.md"
license = "MIT"

[[tool.poetry.packages]]
include = "chatline"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
boto3 = "*"
httpx = "*"
rich = "*"
prompt-toolkit = "*"

[tool.poetry.group.dev.dependencies]
fastapi = "*"
uvicorn = "*"
